<resources>
    <string name="app_name">Parus</string>
    <string name="no_support_link">Нет связи с подопечным</string>
    <string name="no_disabled_link">Нет связи с помощником</string>
    <string name="off_disabled_geoposition">У подопечного отключено отслеживание геопозиции</string>
    <string name="off_support_geoposition">У помощника отключено отслеживание геопозиции</string>
    <string name="disabled_not_find">Подопечный не найден</string>
    <string name="support_not_find">Помощник не найден</string>
    <string name="not_internet">Нет подключения к сети</string>
    <string name="notification_send">Уведомление отправлено помощнику</string>
    <string name="no_pulse_rights">Пульс: Нет прав</string>
    <string name="google_account_not_connected">Пульс: Google Аккаунт не подключён</string>
    <string name="samsung_not_connected">Пульс: Samsung Health не подключён</string>
    <string name="no_pulse_data">Пульс: Данные не обнаружены</string>
    <string name="no_pulse_checked">Пульс: Отслеживание отключено</string>
    <string name="no_reminders">Напоминаний нет</string>
    <string name="no_link_pulse_checked">Пульс: У подопечного отключено отслеживание</string>
    <string name="fast_action_no_choose">Быстрое действие не выбрано</string>
    <string name="detect_text">Распознать текст</string>
    <string name="detect_object">Распознать объект</string>
    <string name="start_listen">Начать слушать</string>
    <string name="say_and_show">Сказать/Показать:</string>
    <string name="cannot_connect_to_shealth">Не удалось подключиться к Samsung Health</string>
    <string name="download_shealth">Установите Samsung Health</string>
    <string name="update_shealth">Обновите Samsung Health</string>
    <string name="enable_shealth">Включите Samsung Health</string>
    <string name="agree_with_shealth_policy">Пожалуйста, согласитесь с политикой Samsung Health</string>
    <string name="shealth_dialog_message">Для отслеживания пульса из Samsung Health необходимо выдать нужные разрешения\n На данный момент приложение не является партнёром Samsung Health, поэтому включите режим разработчика в Samsung Health, чтобы приложение могло считывать данные о пульсе\n Чтобы его включить перейдите во вкладку \'О Samsung Health\' в настройках приложения и несколько раз нажите на версию приложения</string>
    <string name="no_name">Имя не введено</string>
    <string name="error">Произошла ошибка</string>
    <string name="choose_role">Выберите роль</string>
    <string name="id_support">ID помощника</string>
    <string name="id_disabled">ID человека с ОВЗ</string>
    <string name="if_support_registrated">Если ваш подопечный уже зарегистрирован, введите его ID.\nИначе оставьте это поле пустым</string>
    <string name="if_disabled_registrated">Если ваш помощник уже зарегистрирован, введите его ID.\nИначе оставьте это поле пустым</string>
    <string name="first_continue">Продолжить</string>
    <string name="disabled">Человек с ОВЗ</string>
    <string name="support">Помощник</string>
    <string name="your_name">Ваше имя</string>
    <string name="enter_name">Введите Ваше имя</string>
    <string name="stop_listen">Остановить запись</string>
    <string name="recover_password">Восстановить пароль</string>
    <string name="registrated">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="your_tailwind">Your tailwind</string>
    <string name="parus">PARUS</string>
    <string name="my_location">Моё местоположение</string>
    <string name="link_location">Местоположение связанного пользователя</string>
    <string name="add_reminder">Добавить напоминание</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="send_to_email">Мы можем отправить Вам на почту ссылку для восстановления пароля</string>
    <string name="back">НАЗАД</string>
    <string name="enter_text">Введите текст</string>
    <string name="show">Показать</string>
    <string name="say">Сказать</string>
    <string name="often_words">Частые фразы:</string>
    <string name="collections">Коллекции:</string>
    <string name="plus">+</string>
    <string name="add_collection">Добавить коллекцию</string>
    <string name="minus">-</string>
    <string name="delete_collection">Удалить коллекцию</string>
    <string name="words">Фразы:</string>
    <string name="add_word">Добавить фразу в коллекцию</string>
    <string name="delete_word">Удалить фразу из коллекции</string>
    <string name="type_of_detecting">Тип распознавания:</string>
    <string name="detecting_warning">Примечание:\nНа данный момент русский язык не распознаётся</string>
    <string name="detect">Распознать</string>
    <string name="detect_heart_rate">Отслеживать сердцебиение</string>
    <string name="detect_geoposition">Отслеживать геоданные</string>
    <string name="choose_fast_action">Выбрать быстрое действие</string>
    <string name="change_email">Сменить почту</string>
    <string name="change_password">Сменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="type_of_reminder">Тип напоминания</string>
    <string name="reminder_name">Название напоминания</string>
    <string name="add_reminder_time">Добавить время напоминания:</string>
    <string name="reminder_time">Время напоминания</string>
    <string name="delete_last_reminder">Удалить последнее время из списка</string>
    <string name="add_reminder_to_list">Добавить время в список</string>
    <string name="added_reminder_times">Добавленное время:</string>
    <string name="reminder_list">Список времени для напоминания</string>
    <string name="time_not_added">Время не добавлено</string>
    <string name="start_reminder">Начать напоминать в:</string>
    <string name="start_reminder_time">Время начала напоминаний</string>
    <string name="end_reminder_time">Закончить напоминать в:</string>
    <string name="end_reminder">Время конца напоминаний</string>
    <string name="interval">Интервал:</string>
    <string name="reminder_interval">Интервал между напоминаниями</string>
    <string name="min_interval">Минимальный интервал: 15 минут</string>
    <string name="max_interval">Максимальный интервал: 12 часов</string>
    <string name="fast_action_list">Список быстрых действий</string>
    <string name="enter_word">Введите фразу</string>
    <string name="delete_account_warning">Для удаления аккаунта введите вашу почту и пароль</string>
    <string name="new_email">Новый Email:</string>
    <string name="old_password">Старый пароль:</string>
    <string name="new_password">Новый пароль:</string>
    <string name="enter_collection_name">Введите название коллекции</string>
    <string name="collections_list">Список коллекций</string>
    <string name="choose_words">Выберите фразы:</string>
    <string name="speak_speed">Скорость чтения:</string>
    <string name="voice_pitch">Высота голоса:</string>
    <string name="check">Проверить</string>
    <string name="collections_columns">Колонн в коллекциях:</string>
    <string name="account_exit">Выход из аккаунта</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="your_id">Ваш ID</string>
    <string name="support_name">Имя помощника</string>
    <string name="enter_chat">Введите сообщение</string>
    <string name="see">Смотреть</string>
    <string name="listen">Слушать</string>
    <string name="map">Карта</string>
    <string name="call_support">Позвать помощника</string>
    <string name="main">Главная</string>
    <string name="communication">Коммуникация</string>
    <string name="account">Аккаунт</string>
    <string name="chat">Чат</string>
    <string name="reminders_deleting">Удаление напоминаний</string>
    <string name="cancel">Отмена</string>
    <string name="cancel_deleting">Отменить удаление</string>
    <string name="delete">Удалить</string>
    <string name="delete_current_reminders">Удалить выбранные напоминания</string>
    <string name="settings">Настройки</string>
    <string name="send_reset_password_error">Не удалось отправить письмо на Вашу почту</string>
    <string name="send_reset_password_success">Письмо для восстановления пароля отправлено на Вашу почту</string>
    <string name="enter_registration_email">Введите email, на который Вы регистрировали аккаунт</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="create_account_error">Не удалось создать аккаунт</string>
    <string name="short_password_error">Пароль должен быть от 6 символов</string>
    <string name="login_error">Проверьте почту или пароль</string>
    <string name="send_recover_email">Отправить письмо на почту</string>
    <string name="dop_options">Дополнительные опции</string>
    <string name="your_account">Ваш аккаунт</string>
    <string name="start_record_voice">Начать запись голоса</string>
    <string name="send_chat">Отправить сообщение</string>
</resources>
