<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Spinner
        android:id="@+id/dialogReminderSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/type_of_reminder"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_name"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        android:textColor="#000"/>
    <EditText
        android:id="@+id/reminderDialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ems="10"
        android:contentDescription="@string/reminder_name"
        android:autofillHints="@string/enter_text"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <LinearLayout
        android:id="@+id/dialogReminderType1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_reminder_time"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <EditText
                android:id="@+id/reminderDialogTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:contentDescription="@string/reminder_time"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialogDeleteReminder"
                style="@style/RoundedCommunicationButton"
                android:layout_marginEnd="10dp"
                android:textSize="30sp"
                android:text="@string/minus"
                android:contentDescription="@string/delete_last_reminder"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialogAddReminder"
                style="@style/RoundedCommunicationButton"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:text="@string/plus"
                android:contentDescription="@string/add_reminder_to_list"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/added_reminder_times"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="#000"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reminder_list">
            <LinearLayout
                android:id="@+id/reminderDialogScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_not_added"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textColor="#000"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dialogReminderType2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_reminder"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <EditText
                android:id="@+id/reminderDialogTimeStart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:contentDescription="@string/start_reminder_time"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_reminder_time"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

            <EditText
                android:id="@+id/reminderDialogTimeEnd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:contentDescription="@string/end_reminder"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/reminderDialogTimeInterval"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:contentDescription="@string/reminder_interval"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_interval"
            android:layout_marginStart="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_interval"
            android:layout_marginStart="5dp"
            android:textSize="13sp"/>
    </LinearLayout>
</LinearLayout>