<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstRunActivity">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textColor="#000000"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/firstEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/your_name"
            android:autofillHints="@string/your_name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/firstLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:visibility="gone">

            <Button
                android:id="@+id/firstSupport"
                style="@style/RoundedCommunicationButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:text="@string/support"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <Button
                android:id="@+id/firstDisabled"
                style="@style/RoundedCommunicationButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:text="@string/disabled"
                android:textAllCaps="true"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/firstRunBtn"
            style="@style/RoundedCommunicationButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/first_continue"
            android:textAllCaps="true"
            android:textSize="14sp" />

    </RelativeLayout>
</layout>