<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/new_email"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textResetEmail"
        android:autofillHints="@string/email"
        tools:ignore="LabelFor" />

    <ProgressBar
        android:id="@+id/resetEmailProgressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResetEmailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/newEmail"
        tools:layout_editor_absoluteX="5dp" />

    <EditText
        android:id="@+id/emailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebPassword"
        app:layout_constraintTop_toBottomOf="@+id/textResetEmailPassword"
        android:autofillHints="@string/password"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>

